# descartes

./: .gitignore
dependencies/z3-4.0.0/src/Z3/Base/: C.hsc
descartes/: descartes.cabal  stack.yaml
descartes/src/: Main.hs
descartes/src/Analysis/: Axioms.hs  Consolidation.hs  Engine.hs  Properties.hs  Util.hs
