Name:               descartes
Version:            0.1
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           Cartesian Hoare Logic Verifier 
Description:        Cartesian Hoare Logic Verifier
Build-Type:         Simple

Executable descartes
    Main-Is:          Main.hs
    Build-Depends:    base
                    , containers
                    , filepath
                    , directory
                    , mtl
                    , cmdargs
                    , language-java == 0.2.7
                    , z3 == 4.1.2
    Hs-Source-Dirs:   src/
    ghc-options:      -O3 -rtsopts
    Extensions:       DoAndIfThenElse
    other-modules: Analysis.Axioms
                 , Analysis.Consolidation
                 , Analysis.Engine
                 , Analysis.Hoare
                 , Analysis.Invariant
                 , Analysis.Product
                 , Analysis.Properties
                 , Analysis.SelfComposition
                 , Analysis.Types
                 , Analysis.Util
